--- a/16_tensorflow.ipynb
+++ b/16_tensorflow.ipynb
@@ -2071,13 +2071,7 @@
       "42/42 [==============================] - 0s 762us/step - loss: 0.0405 - accuracy: 0.9663\n",
       "Epoch 80/200\n",
       "42/42 [==============================] - 0s 714us/step - loss: 0.0360 - accuracy: 0.9663\n",
-      "Epoch 81/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 81/200\n",
       "42/42 [==============================] - 0s 715us/step - loss: 0.0378 - accuracy: 0.9615\n",
       "Epoch 82/200\n",
       "42/42 [==============================] - 0s 738us/step - loss: 0.0396 - accuracy: 0.9567\n",
@@ -2452,7 +2446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4349e902",
    "metadata": {},
    "outputs": [
@@ -2460,18 +2454,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "결과 평균과 표준편차 : -108.41 (39.70) MSE\n",
-      "Standardized: -18.61 (7.09) MSE \n"
+      "결과 평균과 표준편차 : -161.26 (106.23) MSE\n",
+      "Standardized: -18.20 (8.71) MSE \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([30.210669, 26.00899 , 34.634712, 32.902927, 32.79335 ],\n",
+       "array([22.299416, 21.680027, 30.336107, 30.00816 , 30.335745],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2486,17 +2480,19 @@
     "from sklearn.model_selection import KFold # cv\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "dataframe = pandas.read_csv(\"housing.csv\", delim_whitespace=True, header=None)\n",
     "dataset = dataframe.values\n",
     "X = dataset[:,0:13]\n",
     "Y = dataset[:,13]\n",
-    "def baseline_model(): # 함수로 모델을 구현\n",
+    "def baseline_model(lr=0.1, beta_1=0.9): # 함수로 모델을 구현\n",
+    "    optimizer = Adam(lr=lr, beta_1=beta_1)\n",
     "    model = Sequential()\n",
     "    model.add(Dense(13, input_dim=13, kernel_initializer='normal',\n",
     "                   activation='relu'))\n",
     "    model.add(Dense(1, kernel_initializer='normal'))\n",
     "    \n",
-    "    model.compile(loss='mean_squared_error', optimizer='adam')\n",
+    "    model.compile(loss='mean_squared_error', optimizer=optimizer)\n",
     "    return model\n",
     "seed = 7\n",
     "numpy.random.seed(seed)\n",
@@ -2518,41 +2514,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "48a4a1fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "최적스코어 : -41.226113 사용한 파라미터조합 : {'mlp__batch_size': 10, 'mlp__epochs': 100}\n",
-      "-208.247690 (84.301350) with: {'mlp__batch_size': 10, 'mlp__epochs': 10}\n",
-      "-47.604480 (25.206215) with: {'mlp__batch_size': 10, 'mlp__epochs': 50}\n",
-      "-41.226113 (21.440105) with: {'mlp__batch_size': 10, 'mlp__epochs': 100}\n",
-      "-395.486081 (141.679935) with: {'mlp__batch_size': 20, 'mlp__epochs': 10}\n",
-      "-44.465120 (21.124645) with: {'mlp__batch_size': 20, 'mlp__epochs': 50}\n",
-      "-42.647958 (13.157838) with: {'mlp__batch_size': 20, 'mlp__epochs': 100}\n",
-      "-546.675586 (207.217705) with: {'mlp__batch_size': 40, 'mlp__epochs': 10}\n",
-      "-99.411824 (25.971206) with: {'mlp__batch_size': 40, 'mlp__epochs': 50}\n",
-      "-42.198924 (21.452022) with: {'mlp__batch_size': 40, 'mlp__epochs': 100}\n",
-      "-575.128870 (219.137539) with: {'mlp__batch_size': 60, 'mlp__epochs': 10}\n",
-      "-199.316489 (47.413063) with: {'mlp__batch_size': 60, 'mlp__epochs': 50}\n",
-      "-60.882605 (25.098970) with: {'mlp__batch_size': 60, 'mlp__epochs': 100}\n",
-      "-573.049426 (214.739573) with: {'mlp__batch_size': 80, 'mlp__epochs': 10}\n",
-      "-270.432788 (79.506105) with: {'mlp__batch_size': 80, 'mlp__epochs': 50}\n",
-      "-91.248845 (22.020127) with: {'mlp__batch_size': 80, 'mlp__epochs': 100}\n",
-      "-583.160309 (225.678029) with: {'mlp__batch_size': 100, 'mlp__epochs': 10}\n",
-      "-346.602267 (142.030592) with: {'mlp__batch_size': 100, 'mlp__epochs': 50}\n",
-      "-114.101932 (31.872900) with: {'mlp__batch_size': 100, 'mlp__epochs': 100}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "batch_size = [10,20,40,60,80,100]\n",
     "epochs = [10,50,100]\n",
-    "param_grid = dict(mlp__batch_size=batch_size, mlp__epochs=epochs)\n",
+    "learning_rate = [0.001,0.01,0.1,0.2,0.3]\n",
+    "momentum = [0.5,0.6,0.7,0.8,0.9]\n",
+    "param_grid = dict(mlp__batch_size=batch_size, mlp__epochs=epochs, mlp__lr=learing_rate, mlp__beta_1=momentum)\n",
     "grid = GridSearchCV(estimator=pipeline, param_grid=param_grid, n_jobs=-1)\n",
     "grid_result = grid.fit(X, Y)\n",
     "print(\"최적스코어 : %f 사용한 파라미터조합 : %s\" %(grid_result.best_score_, grid_result.best_params_))\n",
@@ -2652,6 +2624,110 @@
     "print(url)\n",
     "hp = HTMLParser()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8d1848f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "# channel, fillter, kernel, stride, padding\n",
+    "# 마지막이 FFNN\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dense, Flatten\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.datasets import mnist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c0299dbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
+    "# 정규화 -> -0.5 ~ 0.5 학습이 용이\n",
+    "train_images = (train_images / 255) - 0.5\n",
+    "test_images = (test_images / 255) - 0.5\n",
+    "# 원래 이미지 3차원 흑백 1바이트 60000X28X28 X1\n",
+    "train_images = np.expand_dims(train_images, axis=3)\n",
+    "test_images = np.expand_dims(test_images, axis=3)\n",
+    "num_filters = 8 # 필터의 개수\n",
+    "filter_size = 3 # 사이즈 3X3\n",
+    "pool_size = 2 #  합침"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1e61a172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential([\n",
+    "    #1장의 사이즈를 기재\n",
+    "    Conv2D(num_filters, filter_size, input_shape=(28,28,1)),\n",
+    "    MaxPooling2D(pool_size=pool_size),\n",
+    "    Flatten(), # FFNN fully-connected\n",
+    "    Dense(10, activation='softmax') #확률값\n",
+    "])\n",
+    "\n",
+    "model.compile(\n",
+    "    'adam',\n",
+    "    loss = 'categorical_crossentropy',\n",
+    "    metrics=['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e56b8114",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.3505 - accuracy: 0.8989 - val_loss: 0.2075 - val_accuracy: 0.9415\n",
+      "Epoch 2/3\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1882 - accuracy: 0.9456 - val_loss: 0.1544 - val_accuracy: 0.9519\n",
+      "Epoch 3/3\n",
+      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1415 - accuracy: 0.9599 - val_loss: 0.1226 - val_accuracy: 0.9631\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x207e1f1ce20>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(# train, validation, test\n",
+    "    train_images,\n",
+    "    to_categorical(train_labels), # 0.1\n",
+    "    epochs=3,\n",
+    "    validation_data=(test_images, to_categorical(test_labels))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a07c81b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
