--- a/음성 저장.ipynb
+++ b/음성 저장.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "1cb20d84",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "f466c655",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
     "FORMAT = pyaudio.paInt16\n",
     "CHANNELS = 1\n",
     "RATE = 44100\n",
-    "RECORD_SECONDS = 10\n",
+    "RECORD_SECONDS = 20\n",
     "WAVE_OUTPUT_FILENAME = \"output.wav\"\n",
     "\n",
     "p = pyaudio.PyAudio()\n",
@@ -103,7 +103,7 @@
     "stream.close()\n",
     "p.terminate()\n",
     "\n",
-    "wf = wave.open(WAVE_OUTPUT_FILENAME, 'wb')\n",
+    "wf = wave.open(\"music/\"+WAVE_OUTPUT_FILENAME, 'wb')\n",
     "wf.setnchannels(CHANNELS)\n",
     "wf.setsampwidth(p.get_sample_size(FORMAT))\n",
     "wf.setframerate(RATE)\n",
