--- a/17_CNN.ipynb
+++ b/17_CNN.ipynb
@@ -44,12 +44,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "id": "909f8eca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "844f230b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000,)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "45a02503",
    "metadata": {},
    "outputs": [],
    "source": [
-    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
     "# 정규화 -> -0.5 ~ 0.5 학습이 용이\n",
     "train_images = (train_images / 255) - 0.5\n",
     "test_images = (test_images / 255) - 0.5\n",
@@ -631,13 +661,7 @@
       "240/240 [==============================] - 8s 33ms/step - loss: 0.0469 - acc: 0.9864 - val_loss: 0.0583 - val_acc: 0.9849\n",
       "Epoch 30/30\n",
       "240/240 [==============================] - 8s 34ms/step - loss: 0.0422 - acc: 0.9877 - val_loss: 0.0618 - val_acc: 0.9864\n",
-      "60/60 [==============================] - 1s 9ms/step - loss: 0.0559 - acc: 0.9850\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "60/60 [==============================] - 1s 9ms/step - loss: 0.0559 - acc: 0.9850\n",
       "Epoch 1/30\n",
       "240/240 [==============================] - 8s 34ms/step - loss: 0.9383 - acc: 0.6938 - val_loss: 0.2322 - val_acc: 0.9325\n",
       "Epoch 2/30\n",
@@ -888,13 +912,7 @@
       "Epoch 30/30\n",
       "240/240 [==============================] - 8s 34ms/step - loss: 0.0419 - acc: 0.9887 - val_loss: 0.0668 - val_acc: 0.9854\n",
       "60/60 [==============================] - 1s 9ms/step - loss: 0.0615 - acc: 0.9861\n",
-      "Epoch 1/30\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1/30\n",
       "240/240 [==============================] - 8s 35ms/step - loss: 0.9788 - acc: 0.6844 - val_loss: 0.2566 - val_acc: 0.9266\n",
       "Epoch 2/30\n",
       "240/240 [==============================] - 8s 34ms/step - loss: 0.3519 - acc: 0.8979 - val_loss: 0.1943 - val_acc: 0.9395\n",
@@ -1144,13 +1162,7 @@
       "Epoch 30/30\n",
       "240/240 [==============================] - 8s 35ms/step - loss: 0.0419 - acc: 0.9881 - val_loss: 0.0786 - val_acc: 0.9837\n",
       "60/60 [==============================] - 1s 10ms/step - loss: 0.0735 - acc: 0.9836\n",
-      "Epoch 1/30\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1/30\n",
       "240/240 [==============================] - 8s 35ms/step - loss: 0.8523 - acc: 0.7183 - val_loss: 0.1651 - val_acc: 0.9508\n",
       "Epoch 2/30\n",
       "240/240 [==============================] - 8s 35ms/step - loss: 0.2668 - acc: 0.9233 - val_loss: 0.1156 - val_acc: 0.9665\n",
@@ -1400,13 +1412,7 @@
       "Epoch 30/30\n",
       "240/240 [==============================] - 8s 32ms/step - loss: 0.0418 - acc: 0.9877 - val_loss: 0.0576 - val_acc: 0.9866\n",
       "60/60 [==============================] - 1s 9ms/step - loss: 0.0611 - acc: 0.9846\n",
-      "Epoch 1/30\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 1/30\n",
       "240/240 [==============================] - 8s 34ms/step - loss: 0.9704 - acc: 0.6772 - val_loss: 0.2347 - val_acc: 0.9317\n",
       "Epoch 2/30\n",
       "240/240 [==============================] - 8s 35ms/step - loss: 0.3258 - acc: 0.9030 - val_loss: 0.1358 - val_acc: 0.9589\n",
